--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 */JES Stock Samples/*
-*/.idea/*
-Year 1 - Semester 2/.idea/*
+.idea/*
+/.idea/
+/.idea/*
+Year 1 - Semester 2/.idea/workspace.xml
+*.iml
