Assignment #5 - Imported Resources

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,7 @@ Year 1 - Semester 2/.idea/workspace.xml
 *.iml
 
 Year 1 - Semester 2/.idea/workspace.xml
+Year 1 - Semester 2/src/Deepesh/*
+Year 1 - Semester 2/out/*
 *.class
 /out/*
